fix post contents to work with new spacing

--- a/_sass/core/_base.scss
+++ b/_sass/core/_base.scss
@@ -51,8 +51,11 @@ h3 {
 
 ul {
   margin-bottom: .75rem;
-  margin-top: -.75rem;
   list-style: none outside;
+}
+
+p+ul, p+ol {
+  margin-top: -.75rem;
 }
 
 li {
@@ -69,7 +72,6 @@ li > ul li, li > ol li {
 
 ol {
   margin-bottom: .75rem;
-  margin-top: -.75rem;
   list-style: none outside;
   counter-reset: ol-counter;
 }
@@ -99,7 +101,7 @@ hr {
 
 blockquote {
   padding: 0 0 0 1.5rem;
-  margin: 0 0 1.5rem;
+  margin: 0 0 .75rem;
   border-left: 5px solid #eee;
 
   &.pull-right {
