--- a/_sass/modules/_posts.scss
+++ b/_sass/modules/_posts.scss
@@ -29,7 +29,7 @@
   border: 2px solid;
   border-radius: 2px;
   padding: .5em 0 .6em;
-  margin: 0 0 2.4em;
+  margin: 1.25rem 0 2.25rem;
 }
 
 .img--break {
